--- a/.github/workflows/rebuild-proofs.yml
+++ b/.github/workflows/rebuild-proofs.yml
@@ -1,4 +1,4 @@
-name: Rebuild & Timestamp Proofs
+name: Rebuild, Sign & Timestamp Proofs
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
       - 'cdn/certs/**'
       - 'cdn/tests/**'
   schedule:
-    - cron: '0 5 1 * *'   # 1st of each month at 05:00 UTC
+    - cron: '0 5 1 * *'
 
 permissions:
   contents: write
@@ -51,13 +51,21 @@ jobs:
           --private ./secrets/fcc_signing_key.pem
           --out ./proofs/fcc_cert_manifest.sig
 
+      - name: Install OpenTimestamps client
+        run: sudo apt-get update && sudo apt-get install -y opentimestamps-client
+
+      - name: Create blockchain timestamp
+        run: |
+          ots stamp ./proofs/fcc_cert_manifest.json || true
+          ots info ./proofs/fcc_cert_manifest.json.ots || true
+
       - name: Add audit metadata
         run: |
           node -e "
           const fs=require('fs');
           const m=JSON.parse(fs.readFileSync('./proofs/fcc_cert_manifest.json','utf8'));
           m.auditedAt=new Date().toISOString();
-          m.auditedBy='GitHub CI';
+          m.auditedBy='GitHub CI (Blockchain Anchored)';
           fs.writeFileSync('./proofs/fcc_cert_manifest.json',JSON.stringify(m,null,2));
           "
 
@@ -65,6 +73,6 @@ jobs:
         run: |
           git config user.name 'Flying Circus Bot'
           git config user.email 'bot@flyingcircuscoffee.com'
-          git add proofs/fcc_cert_manifest.json proofs/fcc_cert_manifest.sig
-          git commit -m "Automated proof rebuild $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "No changes"
+          git add proofs/fcc_cert_manifest.json proofs/fcc_cert_manifest.sig proofs/fcc_cert_manifest.json.ots
+          git commit -m "Proof rebuild & blockchain timestamp $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "No changes"
           git push
