--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "tailwindcss": "^4.1.14",
+    "tweetnacl": "^1.0.3",
     "typescript": "^5.9.2",
     "vite": "^6.2.4",
     "vite-tsconfig-paths": "^4.3.1"
