--- a/.github/workflows/rebuild-proofs.yml
+++ b/.github/workflows/rebuild-proofs.yml
@@ -70,9 +70,12 @@ jobs:
           "
 
       - name: Commit and push results
-        run: |
-          git config user.name 'Flying Circus Bot'
-          git config user.email 'bot@flyingcircuscoffee.com'
-          git add proofs/fcc_cert_manifest.json proofs/fcc_cert_manifest.sig proofs/fcc_cert_manifest.json.ots
-          git commit -m "Proof rebuild & blockchain timestamp $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "No changes"
-          git push
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  run: |
+    git config user.name 'Flying Circus Bot'
+    git config user.email 'bot@flyingcircuscoffee.com'
+    git add proofs/fcc_cert_manifest.json proofs/fcc_cert_manifest.sig proofs/fcc_cert_manifest.json.ots
+    git commit -m "Proof rebuild & blockchain timestamp $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "No changes"
+    git push origin HEAD:${{ github.ref }}
+
