--- a/.github/workflows/rebuild-proofs.yml
+++ b/.github/workflows/rebuild-proofs.yml
@@ -80,8 +80,9 @@ jobs:
           git config user.name 'Flying Circus Bot'
           git config user.email 'bot@flyingcircuscoffee.com'
           git add proofs/fcc_cert_manifest.json proofs/fcc_cert_manifest.sig proofs/fcc_cert_manifest.json.ots
-          git commit -m "[skip ci] Proof rebuild & blockchain timestamp $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "No changes"
-          git push origin HEAD:${{ github.ref }}
+          git commit -m "Proof rebuild & blockchain timestamp $(date -u +'%Y-%m-%dT%H:%M:%SZ')" || echo "No changes"
+          # Push to dedicated 'proofs' branch instead of main
+          git push origin HEAD:proofs
 
 
 
