--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@remix-run/node": "^2.17.1",
     "@shopify/hydrogen": "2025.7.0",
     "@shopify/remix-oxygen": "^3.0.1",
     "graphql": "^16.10.0",
